services/Kubernetes/deployment_backendud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-service-ud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-service-ud
  template:
    metadata:
      labels:
        app: backend-service-ud
    spec:
      containers:
      - name: backend
        image: 637423519309.dkr.ecr.us-west-2.amazonaws.com/backendnotes-2:latest
        ports:
        - containerPort: 5000
