services/Kubernetes/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 637423519309.dkr.ecr.us-west-2.amazonaws.com/frontendnotes-1:latest
        ports:
        - containerPort: 3000
