services/Kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: backend-service-ud
spec:
  type: ClusterIP
  selector:
    app: backend-service-ud
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5001
